# agentic_rag

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
notebook/: document.ipynb  numpy_tutorial.ipynb
src/: __init__.py  config.py  data_loader.py  embedding.py  guardrails.py  prompt_builder.py  rag_pipeline.py  search.py  vectorstore.py
